--- a/GlewTest/GlewTest.vcxproj.filters
+++ b/GlewTest/GlewTest.vcxproj.filters
@@ -58,6 +58,12 @@
     <ClCompile Include="RenderManager.cpp">
       <Filter>Files</Filter>
     </ClCompile>
+    <ClCompile Include="Cube.cpp">
+      <Filter>Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Sphere.cpp">
+      <Filter>Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="MainWindow.ui">
@@ -84,6 +90,12 @@
       <Filter>Files</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
+      <Filter>Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Cube.h">
+      <Filter>Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sphere.h">
       <Filter>Files</Filter>
     </ClInclude>
   </ItemGroup>
